Removing min-h-screen from the html body to see if that helps resolve navbar height issue on ios

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  min-height: fill-available;
-  min-height: -webkit-fill-available;
-}
-html {
-  height: fill-available;
-  height: -webkit-fill-available;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
